@@ -3,6 +3,10 @@
 
 Added the Ivy and Maven Ant Tasks jars to the binary distribution.
 
+Amend the Maven target set to add explicit specification of the source and test directories.  This applied
+the Groovy joint compiler to everything in that directory, i.e. the Maven 2 split of language specific
+directories is not applied.
+
 1.1.0 ( r8964 )
 ---------------
 
